# report-mAIstro

./: pyproject.toml  report_masitro.py  requirements.txt
