[project]
name = "report-masitro"
version = "0.1.0"
description = "AI Report Generator"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langgraph-cli",
    "langgraph-sdk",
    "langgraph",
    "langsmith",
    "notebook",
    "tavily-python",
]

[project.optional-dependencies]
dev = [
    "aider-chat",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
