[project]
name = "report-masitro"
version = "0.1.0"
description = "AI Report Generator"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langgraph-cli",
    "langgraph-sdk",
    "langgraph",
    "langsmith",
    "notebook",
    "tavily-python",
]

[project.optional-dependencies]
dev = [
    "aider-chat",
    "ruff",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
max-line-length = 999
extend-ignore = ["E501"]
